[package]
name = "poly-host-bridge"
description = "Host-API bridge protocol — exposes WIT host-api operations (exec-command, http-request, …) over HTTP JSON for the dioxus WASM target. Native shells (Wry, Electron, future iOS/Android) bind a /host endpoint that speaks this protocol; client code (e.g. WASM-side messenger plugins) calls it through this crate's typed client."
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib"]

[features]
# Default: on wasm32, `HttpClient::new()` routes through the native shell's
# /host bridge. This feature flips wasm32 to use reqwest/browser-fetch directly
# — required for apps/web which runs in a real browser with no native shell.
web-direct = []

# video: enables the /host/video/* H.264 encode/decode endpoints and the
# VideoBridgeClient typed wrapper. Default OFF — openh264-rs compiles Cisco's
# reference encoder from C source (~30s extra build time) and is only needed
# when the native video-backend is in use.
#
# PATENT: uses openh264 features = ["libloading"], which loads Cisco's prebuilt
# binary at runtime and carries Cisco's MPEG-LA patent grant for redistribution.
# Royalty-free alternative: AV1 via rav1e/dav1d if patent-grant terms ever shift.
# See docs/dev/video-codec-strategy.md for the full tradeoff analysis.
video = ["dep:openh264", "dep:axum"]

# udp: enables the /host/udp/* generic UDP socket service.
#
# WASM safety: udp.rs is cfg-gated to not(target_arch = "wasm32") + this feature.
# The typed client (udp_client.rs) compiles on all targets.
#
# Native deps: tokio/net (already a workspace dep), uuid for session IDs, axum.
udp = ["dep:uuid", "dep:axum"]

# codec-opus: enables the /host/codec/opus/* Opus encode/decode service.
#
# WASM safety: codec_opus.rs is cfg-gated to not(target_arch = "wasm32") + this feature.
# The typed client (codec_opus_client.rs) compiles on all targets.
#
# Native deps: audiopus (libopus FFI), uuid, axum.
codec-opus = ["dep:audiopus", "dep:uuid", "dep:axum"]

# aead: enables the /host/aead/* AEAD encrypt/decrypt service.
#
# WASM safety: aead.rs is cfg-gated to not(target_arch = "wasm32") + this feature.
# The typed client (aead_client.rs) compiles on all targets.
#
# Native deps: chacha20poly1305, aes-gcm, uuid, axum.
aead = ["dep:chacha20poly1305", "dep:aes-gcm", "dep:uuid", "dep:axum"]

# voice-primitives: convenience feature that enables all three generic voice
# transport primitives: udp + codec-opus + aead. Use this instead of listing
# all three individually when building a shell that hosts all three services.
voice-primitives = ["udp", "codec-opus", "aead"]

# voice: kept for backwards-compat with apps/poly-host and apps/web server
# feature that reference poly-host/voice → poly-host-bridge/voice.
# Now maps to voice-primitives (no Discord WS or tungstenite dep needed here —
# that protocol lives in the discord plugin).
voice = ["voice-primitives"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
# reqwest is the wasm-and-native HTTP client used to call the bridge endpoint
# AND it backs the Direct transport in the `http` module on native.
reqwest = { workspace = true }
# Bytes are the public body type returned from `http::Response`.
bytes = "1"
# Used by RequestBuilder::form/query for x-www-form-urlencoded encoding.
serde_urlencoded = "0.7"
# Used by voice_client.rs (SSE stream) and voice.rs handlers — works on WASM.
futures = { workspace = true }
async-stream = { workspace = true }
# Used by voice_client.rs for warn! logging on SSE parse failures.
tracing = { workspace = true }

# Native: subprocess + HTTP server-side dispatch needs tokio process / fs.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["process", "rt-multi-thread", "net"] }

# openh264 — H.264 encode/decode via Cisco's reference implementation.
# Only compiled when the `video` feature is enabled and target is non-wasm.
# Uses the `libloading` feature: loads Cisco's prebuilt binary at runtime,
# which carries Cisco's MPEG-LA patent grant for redistribution.
openh264 = { version = "0.9", features = ["libloading"], optional = true }

# axum is needed by video.rs and voice.rs handlers.
# It is already a dep of poly-host/apps/desktop-web but not of this crate itself.
# We add it here gated to non-wasm + video/voice so the routers can be constructed
# without requiring callers to pull in axum separately.
axum = { workspace = true, optional = true }

# Generic voice primitive deps — gated by udp / codec-opus / aead features.
# These are native-only libraries; the cfg-gated modules (udp.rs, codec_opus.rs,
# aead.rs) ensure they never link into the WASM bundle.
audiopus = { workspace = true, optional = true }
chacha20poly1305 = { workspace = true, optional = true }
aes-gcm = { workspace = true, optional = true }
uuid = { workspace = true, optional = true, features = ["v4"] }

# tokio-tungstenite was previously required by voice.rs for the Discord WS
# handshake. That protocol now lives in clients/discord/src/voice_bridge.rs.
# The dep is removed from host-bridge.

# WASM: read `window.location.origin` so the default bridge URL points at the
# same origin that served the WASM bundle (fullstack apps/web / apps/desktop /
# apps/desktop-electron all host `/host/*` on their own port). Without this the
# client would fall back to `http://127.0.0.1:9333`, which is an unreachable
# cross-origin and breaks F5 persistence in the browser.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["Window", "Location"] }

[[test]]
name = "voice"
path = "tests/voice.rs"
required-features = ["voice"]

[[test]]
name = "udp"
path = "tests/udp.rs"
required-features = ["udp"]

[[test]]
name = "codec-opus"
path = "tests/codec_opus.rs"
required-features = ["codec-opus"]

[[test]]
name = "aead"
path = "tests/aead.rs"
required-features = ["aead"]

[dev-dependencies]
# Used in tests/video.rs for the `oneshot` request helper.
tower = { workspace = true, features = ["util"] }
# axum body utilities needed in tests.
axum = { workspace = true }
# tokio runtime for voice integration test.
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
