[package]
name = "poly-lint-gate"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[build-dependencies]
ignore = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }

[features]
# When this feature is enabled, the build script regenerates crates/lint-gate/baseline.json
# from the current set of violations and does NOT emit errors for that run.
regen-baseline = []

[lints]
workspace = true
